sin errores, falta la tecla enter

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/cuitlahuac/.netbeans/8.1/build.properties
+user.properties.file=/home/chris/.netbeans/8.1/build.properties
